--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 /*===== Colores =====*/
 :root{
-  --first-color: #4070F4;
-  --second-color: #0E2431;
+  --first-color: #333D79FF;
+  --second-color: rgba(248, 222, 229, 0.637);
 }
 
 /*===== Fuente y tipografia =====*/
@@ -68,6 +68,7 @@ body{
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
+  background-color: black;
 }
 h1,h2,p{
   margin: 0;
@@ -127,8 +128,8 @@ img{
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #fff;
-  box-shadow: 0 1px 4px rgba(146,161,176,.15);
+  background-color: black;
+  box-shadow: 0 1px 4px rgba(211, 233, 255, 0.15);
 }
 
 /*===== NAV =====*/
@@ -234,13 +235,13 @@ img{
 .button{
   display: inline-block;
   background-color: var(--first-color);
-  color: #fff;
+  color: rgb(0, 0, 0);
   padding: .75rem 2.5rem;
   font-weight: var(--font-semi);
   border-radius: .5rem;
 }
 .button:hover{
-  box-shadow: 0 10px 36px rgba(0,0,0,.15);
+  box-shadow: 0 10px 36px rgba(255, 255, 255, 0.15);
 }
 
 /* ===== ABOUT =====*/
@@ -277,7 +278,7 @@ img{
   margin-bottom: var(--mb-4);
   background-color: var(--first-color);
   border-radius: .9rem;
-  box-shadow: 0 7px 35px rgba(14,36,49,.15);
+  box-shadow: 0 7px 35px rgba(255, 255, 255, 0.192);
 }
 .skills__data{
   display: flex;
@@ -288,7 +289,7 @@ img{
   padding: .5rem 1rem;
   margin-bottom: var(--mb-4);
   border-radius: .5rem;
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+  box-shadow: 0 4px 25px rgba(153, 99, 137, 0.219);
 }
 .skills__icon{
   font-size: 2rem;
@@ -329,7 +330,7 @@ img{
   row-gap: 2rem;
 }
 .work__img{
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+  box-shadow: 0 4px 25px rgba(84, 120, 141, 0.233);
   border-radius: .5rem;
   overflow: hidden;
 }
