--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 :root{
   /* --body-font: 'Monaco', Monospace; */
   --body-font: 'Poppins', sans-serif;
-  --big-font-size: 2.5rem;
+  --big-font-size: 2.3rem;
   --h2-font-size: 2rem;
   --normal-font-size: 1.5rem;
 }
@@ -504,7 +504,7 @@ img{
                         <li class="nav__item"><a href="#research" class="nav__link">Research</a></li>
                         <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Certificates</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link"><i class='bx bxs-contact'></i></a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</i></a></li>
                     </ul>
                 </div>
 
