--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ img{
 /*===== HOME =====*/
 .home{
   height: calc(100vh - 3rem);
-  row-gap: 1rem;
+  row-gap: .8rem;
 }
 .home__data{
   align-self: center;
