Some things changed

--- a/index.html
+++ b/index.html
@@ -786,10 +786,10 @@ img{
             
             /*===== SCROLL REVEAL ANIMATION =====*/
             const sr = ScrollReveal({
-                origin: 'top',
+                origin: 'left',
                 distance: '80px',
                 duration: 2000,
-                reset: true
+                // reset: true
             });
             
             /*SCROLL HOME*/
