--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@ img{
             </section>
 
             <!--===== Research =====-->
-            <section id="research">
+            <section class="skills section" id="research">
               <h2 class="section-title">Research</h2>
 
               <div class=" bd-grid">
@@ -634,7 +634,7 @@ img{
                 </section>
 
           <!--===== Projects =====-->
-          <section id="projects">
+          <section class="skills section" id="projects">
             <h2 class="section-title">Projects</h2>
 
             <div class=" bd-grid">
@@ -676,7 +676,7 @@ img{
         </section>
 
             <!--===== WORK =====-->
-            <section class="work__section" id="work">
+            <section class="skills section" id="work">
                 <h2 class="section-title">Certificates</h2>
 
                 <div class="work__container bd-grid">
@@ -727,7 +727,7 @@ img{
               <div class="skills__container bd-grid">   
                 
                 <div >
-                  <h3>Please find me in the following</h3>
+                  <h3 class="skills__subtitle" >Please find me in the following</h3>
                   <a href="https://www.linkedin.com/in/md-kamrus-samad-4363aa15b/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
                   <a href="https://www.facebook.com/ks.limon.9" class="home__social-icon"><i class='bx bxl-facebook' ></i></a>
                   <a href="https://github.com/KsLimon" class="home__social-icon"><i class='bx bxl-github' ></i></a>
