--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ img{
                         <!-- <li class="nav__item"><a href="#home" class="nav__link active"><i class='bx bx-home-smile'></i></a></li> -->
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Education & Skills</a></li>
+                        <li class="nav__item"><a href="#experience" class="nav__link">Experience</a></li>
                         <li class="nav__item"><a href="#research" class="nav__link">Research</a></li>
                         <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Certificates</a></li>
@@ -611,6 +612,17 @@ img{
                     
                 </div>
             </section>
+            
+            <!--===== Experience =====-->
+            <section class="skills section" id="experience">
+              <h2 class="section-title">Research</h2>
+
+              <div class=" bd-grid">
+              <h1 class="about__subtitle">1. Trainee Software Engineer  |<font size="2"><i>MySoft Ltd.</i></font> </h1>
+            <p class="about__text">I have just started from here and working in .NET Core framework.<font size="2"><i>Skills: Software Development, .NET Core, C#</i></font>
+              </p>
+                </div>
+                </section>
 
             <!--===== Research =====-->
             <section class="skills section" id="research">
