--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@ img{
             
             <!--===== Experience =====-->
             <section class="skills section" id="experience">
-              <h2 class="section-title">Research</h2>
+              <h2 class="section-title">Experience</h2>
 
               <div class=" bd-grid">
               <h1 class="about__subtitle">1. Trainee Software Engineer  |<font size="2"><i>MySoft Ltd.</i></font> </h1>
