--- a/index.html
+++ b/index.html
@@ -619,7 +619,9 @@ img{
 
               <div class=" bd-grid">
               <h1 class="about__subtitle">1. Trainee Software Engineer  |<font size="2"><i>MySoft Ltd.</i></font> </h1>
-            <p class="about__text">I have just started from here and working in .NET Core framework.<font size="2"><i>Skills: Software Development, .NET Core, C#</i></font>
+            <p class="about__text">I have just started from here and working in .NET Core framework.
+                <br>
+                <h1><font size="2"><i>Skills: Software Development, .NET Core, C#</i></font></h1>
               </p>
                 </div>
                 </section>
