--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ img{
                      <span > <h3>BS in Computer Science and Engineering</h3> </span> <br>
                      <span > North South University, Dhaka, Bangladesh </span> <br>
                      <span > January 2018 - May 2022 </span> <br>
-                     <span > CGPA : <span class="font-italic"> 2.75 </span></span> (82 percent)<br>
+                     <span > CGPA : <span class="font-italic"> 2.71 </span></span> (82 percent)<br>
                    </p>
                    
                    <p class="education__data">
@@ -618,12 +618,29 @@ img{
               <h2 class="section-title">Experience</h2>
 
               <div class=" bd-grid">
-              <h1 class="about__subtitle">1. Trainee Software Engineer  |<font size="2"><i>MySoft Ltd.</i></font> </h1>
-            <p class="about__text">I have just started from here and working in .NET Core framework.
-                <br>
-                <h1><font size="2"><i>Skills: Software Development, .NET Core, C#</i></font></h1>
+              <h1 class="about__subtitle">1. Junior Software Engineer  |<font size="2"><i>Beraten Software Corporation</i></font> </h1>
+            <p class="about__text">
+              Following my internship, I transitioned into the role of a Junior Software Engineer at Beraten Software Corporation, an esteemed firm renowned for crafting software solutions tailored to tribal organizations. In this capacity, I served as a dedicated Full-Stack Developer, harnessing my proficiency in ASP.NET Core Razor Pages, MSSQL, and Telerik Kendo UI to make substantial contributions to several projects.
+              <br><br>
+              My principal responsibilities encompassed the strategic implementation of critical features on the back end, a task that played a pivotal role in the successful realization of our projects. Additionally, I undertook the creation of printable reports using Telerik reporting, further amplifying the value and utility of our software offerings.
+              <br><br>
+              My tenure at Beraten Software Corporation marked a significant phase in my professional journey, allowing me to not only expand my technical skill set but also contribute impactful teamrole.
+              <br>
+                <h1><font size="2"><i>Skills: Asp .NET Core, C#, Razor Pages, TFS, Telerik Reporting, Kendo UI</i></font></h1>
               </p>
                 </div>
+                <br>
+                <div class=" bd-grid">
+                  <h1 class="about__subtitle">2. Trainee Software Engineer  |<font size="2"><i>MySoft Ltd.</i></font> </h1>
+                <p class="about__text">
+                  During my trainee phase, I diligently engaged in comprehensive software testing, meticulously scrutinizing various features. My responsibilities encompassed rectifying UI-related anomalies, ensuring a seamless and visually appealing user experience. Moreover, I adeptly tackled diverse Back-End tasks, refining my problem-solving skills.
+                  <br><br>
+                  This phase also provided a valuable opportunity for me to immerse myself in the intricacies of .NET development. With a resolute aspiration to evolve into a proficient full-stack developer, I eagerly acquired a deep-seated understanding of .NET technologies, poised to contribute effectively across both front-end and back-end domains.
+                    <br>
+                    <h1><font size="2"><i>Skills: Asp .NET Core, C#, Razor Pages, TFS, Telerik</i></font></h1>
+                  </p>
+                    </div>
+
                 </section>
 
             <!--===== Research =====-->
