--- a/index.html
+++ b/index.html
@@ -243,7 +243,12 @@ img{
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 295px;
+}
+
+.home__img img {
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0px 10px 10px 0px rgba(51, 83, 87, 0.8);
 }
 
 /*BUTTONS*/
@@ -506,6 +511,7 @@ img{
                         <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Certificates</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</i></a></li>
+                        <li class="nav__item"><a href="assets/img/Md Kamrus Samad.pdf" class="nav__link">Resume</i></a></li>
                     </ul>
                 </div>
 
